Implement core handlers and improve deck structure
- Added handlers: StartHandler, AddDeckHandler, ChooseDeckHandler
- Introduced DeckMessageBuilder for reusable deck list rendering
- Refactored entity relationships: DeckEntity, UserEntity, FlashCardEntity
- Updated DeckRepository:
  - Added method to fetch decks with flashcards by user chatId:
    @Query("SELECT d FROM DeckEntity d LEFT JOIN FETCH d.flashCardList WHERE d.user.chatId = :chatId")
  - Added existsByUserChatId(chatId) check